# claude-marketplace

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/: anki-flashcards  conventional-commits  git-absorb  git-chain  jj  long-form-math  mermaid-cli  react-best-practices  style-extractor  style-writer  tmux  ultrathink
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
changelogs/: agent-skill-init.md  ai-friendly-cli.md  anki-flashcards.md  ansible.md  chrome-cdp.md  conventional-commits.md  design-principles.md  duckdb.md  fd.md  file-search.md  fuzzy-filter.md  fuzzy-search.md  fzf.md  git-absorb.md  git.md  gogcli.md  handoff.md  hledger.md  jj.md  jq.md  k3s.md  kubernetes.md  linear.md  long-form-math.md  mermaid-cli.md  model-routing.md  obsidian-bases.md  obsidian-markdown.md  playwright.md  postgres-admin.md  postgres-extensions.md  postgres-performance.md  postgres-sql.md  psql.md  pup.md  pytest.md  react-best-practices.md  ripgrep.md  sequential-thinking.md  skill-creator.md  (+11 more)
docs/: README.md  TESTING_STRATEGY.md
notes/: README.md
notes/git-absorb/: README.md  analysis.md
notes/skill-creator/: README.md
notes/tmux/: README.md  tool-recommendations.md
plugins/agent-skill-init/.codex-plugin/: plugin.json
plugins/ai-friendly-cli/.codex-plugin/: plugin.json
plugins/ai-friendly-cli/references/: input-hardening.md
plugins/anki-flashcards/.codex-plugin/: plugin.json
plugins/ansible/.codex-plugin/: plugin.json
plugins/chrome-cdp/: SKILL.md  pyproject.toml
plugins/chrome-cdp/.codex-plugin/: plugin.json
plugins/chrome-cdp/references/: daemon-ipc.md
plugins/chrome-cdp/skills/chrome-cdp/references/: coordinate-system.md
plugins/chrome-cdp/src/chrome_cdp/: __init__.py  __main__.py  client.py  commands.py  daemon.py  helpers.py
plugins/chrome-cdp/tests/: conftest.py  test_client.py  test_commands.py  test_helpers.py
plugins/conventional-commits/: SKILL.md
plugins/conventional-commits/.codex-plugin/: plugin.json
plugins/design-principles/: SKILL.md
plugins/design-principles/.codex-plugin/: plugin.json
plugins/duckdb/.codex-plugin/: plugin.json
plugins/fd/.codex-plugin/: plugin.json
plugins/file-search/: .mcp.json  README.md  pyproject.toml
plugins/file-search/.claude-plugin/: plugin.json
plugins/file-search/.codex-plugin/: mcp.json  plugin.json
plugins/file-search/tests/: conftest.py  test_fd_server.py
plugins/fuzzy-filter/.codex-plugin/: plugin.json
plugins/fuzzy-search/: .mcp.json  README.md  pyproject.toml
plugins/fuzzy-search/.claude-plugin/: plugin.json
plugins/fuzzy-search/.codex-plugin/: mcp.json  plugin.json
plugins/fuzzy-search/scripts/: mcp_fuzzy_search.py
plugins/fuzzy-search/tests/: conftest.py  test_fuzzy_search.py
plugins/fzf/.codex-plugin/: plugin.json
plugins/git-absorb/.codex-plugin/: plugin.json
plugins/git-absorb/references/: advanced-usage.md
plugins/git-chain/.codex-plugin/: plugin.json
plugins/git/.codex-plugin/: plugin.json
plugins/gogcli/: SKILL.md
plugins/gogcli/.codex-plugin/: plugin.json
plugins/gogcli/references/: auth.md  docs-slides.md  gmail.md  other-surfaces.md  sheets.md
plugins/handoff/.codex-plugin/: plugin.json
plugins/hledger/.codex-plugin/: plugin.json
plugins/jj/: SKILL.md
plugins/jj/.codex-plugin/: plugin.json
plugins/jj/references/: commands.md  configuration.md  revsets.md
plugins/jq/.codex-plugin/: plugin.json
plugins/k3s/.codex-plugin/: plugin.json
plugins/kubernetes/.codex-plugin/: plugin.json
plugins/linear/: api.md  package.json  projects.md  sdk.md  sync.md  troubleshooting.md  tsconfig.json
plugins/linear/.codex-plugin/: plugin.json
plugins/linear/scripts/: create-initiative-update.ts  create-issue-with-project.ts  create-project-update.ts  extract-image.ts  linear-ops.ts  phase-complete.ts  query.ts  setup.ts  sync.ts  upload-image.ts
plugins/linear/tests/: exit-codes.test.ts  taxonomy-data.test.ts  taxonomy-validation.test.ts
plugins/long-form-math/.codex-plugin/: plugin.json
plugins/mermaid-cli/: SKILL.md
plugins/playwright/: SKILL.md
plugins/pup/.codex-plugin/: plugin.json
plugins/react-best-practices/: pyproject.toml
plugins/react-best-practices/.codex-plugin/: plugin.json
plugins/react-best-practices/scripts/: __init__.py  __main__.py  build.py  config.py  extract_tests.py  parser.py  types.py  validate.py
plugins/react-best-practices/skills/react-best-practices/: SKILL.md
plugins/react-best-practices/skills/react-best-practices/references/: rule-authoring.md
plugins/react-best-practices/tests/: conftest.py  test_build.py  test_extract_tests.py  test_parser.py  test_validate.py
plugins/sequential-thinking/: .mcp.json  README.md  pyproject.toml
plugins/sequential-thinking/.claude-plugin/: plugin.json
plugins/sequential-thinking/.codex-plugin/: mcp.json  plugin.json
plugins/sequential-thinking/scripts/: mcp_sequential_thinking.py
plugins/sequential-thinking/tests/: test_sequential_thinking.py
plugins/skillboss-ai-gateway/: SKILL.md
plugins/sqlite/: .mcp.json  README.md  pyproject.toml
plugins/sqlite/.claude-plugin/: plugin.json
plugins/sqlite/.codex-plugin/: mcp.json  plugin.json
plugins/sqlite/scripts/: mcp_sqlite_server.py
plugins/sqlite/tests/: conftest.py  test_sqlite_server.py
plugins/style-extractor/: SKILL.md
plugins/style-writer/: SKILL.md
plugins/tmux/: SKILL.md
references/: README.md  playwright-skill-plan.md
schemas/: marketplace-schema.json  plugin-schema.json  skill-frontmatter-schema.json
scripts/: install_codex_skills.py  manage_codex_skills.py  sync_codex_plugins.py
scripts/validators/: validate_all.py  validate_structure.py  validate_yaml.py
tests/: Dockerfile.playwright  Dockerfile.tests  README.md  test_install_codex_skills.py  test_manage_codex_skills.py  test_sync_codex_plugins.py
tests/bash/: test-find-sessions.sh  test-list-sessions.sh  test-pane-health.sh  test-playwright.sh  test-wait-for-text.sh
tests/fixtures/: tmux.test.conf
writing-styles/: README.md
(+223 files in other folders)
