[project]
name = "claude-marketplace"
version = "0.1.0"
description = "Testing and validation tools for Claude Code skills marketplace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "rich>=13.7.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=scripts --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "ty>=0.0.1a27",
]

[tool.ty]
# Type checking configuration

[[tool.ty.overrides]]
# Validators use dynamic dictionaries extensively; relax some checks
include = ["scripts/validators/*.py"]

[tool.ty.overrides.rules]
# These rules are too strict for dynamic dict operations in validators
unsupported-operator = "ignore"         # Allow += on dict values
invalid-argument-type = "ignore"        # Allow dynamic dict value types
possibly-missing-attribute = "ignore"   # Allow .append on dict values
invalid-parameter-default = "error"     # Keep this strict
