[project]
name = "chrome-cdp"
version = "1.0.0"
description = "Chrome DevTools Protocol CLI - connect to live Chrome sessions"
requires-python = ">=3.10"
dependencies = ["websockets>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov>=4.1", "ruff>=0.8", "ty>=0.0.1a27"]

[project.scripts]
cdp = "chrome_cdp.__main__:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chrome_cdp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
