[project]
name = "react-best-practices"
version = "1.0.0"
description = "Build tools for React Best Practices skill"
requires-python = ">=3.10"
# No runtime dependencies needed — stdlib only

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.8", "ty>=0.0.1a27"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
